added categories creation functionality
