# validators/index.js
@@ -1,3 +1,4 @@
 import * as auth from './auth';
+import * as categories from './categories';
 
-export { auth };
+export { auth, categories };
